# disaster_response_pipeline

./: README.md  pyproject.toml
app/: run.py
app/templates/: master.html
data/: process_data.py
models/: train_classifier.py
pipeline_nb/: etl_pipeline.ipynb  ml_pipeline.ipynb
