[tool.poetry]
name = "disaster-response-pipeline"
version = "0.1.0"
description = ""
authors = ["Gianluca Manca <gianluca.manca89@gmail.com>"]
readme = "README.md"
packages = [{include = "disaster_response_pipeline"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.3"
scikit-learn = "^1.1.2"
pandas = "^1.5.0"
seaborn = "^0.12.0"
black = "^22.8.0"
matplotlib = "^3.6.0"
plotly = "^5.10.0"
dash = "^2.6.2"
ipykernel = "^6.16.0"
SQLAlchemy = "^1.4.41"
keras = "^2.10.0"
nltk = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
